@@ -1,0 +1,1 @@
+<?php $secret='tHeSeCrEtPaSsWoRd'; ?>
